--- a/MI138_GroupProject/Web.config
+++ b/MI138_GroupProject/Web.config
@@ -11,8 +11,9 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MI138_GroupProject-20190513065532.mdf;Initial Catalog=aspnet-MI138_GroupProject-20190513065532;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="MI138Context" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=MI138_GroupProject;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MI138_GroupProject-20190513065532.mdf;Initial Catalog=aspnet-MI138_GroupProject-20190513065532;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
@@ -86,6 +87,10 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="MI138_GroupProject.DAL.MI138Context, MI138_GroupProject">
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb"/>
