--- a/MI138_GroupProject/MI138_GroupProject.csproj
+++ b/MI138_GroupProject/MI138_GroupProject.csproj
@@ -181,14 +181,32 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905131712482_InitialCreate.cs" />
+    <Compile Include="Migrations\201905131712482_InitialCreate.Designer.cs">
+      <DependentUpon>201905131712482_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905152154123_UpdateModels.cs" />
+    <Compile Include="Migrations\201905152154123_UpdateModels.Designer.cs">
+      <DependentUpon>201905152154123_UpdateModels.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905152211426_UpdateModels1.cs" />
+    <Compile Include="Migrations\201905152211426_UpdateModels1.Designer.cs">
+      <DependentUpon>201905152211426_UpdateModels1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Comment.cs" />
+    <Compile Include="Models\Game.cs" />
+    <Compile Include="DAL\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Review.cs" />
+    <Compile Include="Models\Tag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -248,6 +266,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Games\Create.cshtml" />
+    <Content Include="Views\Games\Delete.cshtml" />
+    <Content Include="Views\Games\Details.cshtml" />
+    <Content Include="Views\Games\Edit.cshtml" />
+    <Content Include="Views\Games\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -264,6 +287,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201905131712482_InitialCreate.resx">
+      <DependentUpon>201905131712482_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905152154123_UpdateModels.resx">
+      <DependentUpon>201905152154123_UpdateModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905152211426_UpdateModels1.resx">
+      <DependentUpon>201905152211426_UpdateModels1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
